changes to views and controller

--- a/app/views/Rooms/addRoom.scala.html
+++ b/app/views/Rooms/addRoom.scala.html
@@ -1,4 +1,5 @@
 @main("Add room"){
+    <h3 class="text-center">Add Rooms</h3>
     <form method="post" action="@routes.RoomController.postAddRoom()">
         <div class="form-group">
     <label for="room-name-add">Name</label>
